--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,8 +4,8 @@
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+//vuetify
+@import '~vuetify/dist/vuetify.min.css';
 
 .navbar-laravel {
     background-color: #fff;
