--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,9 @@
 //vuetify
 @import '~vuetify/dist/vuetify.min.css';
 
+//own css
+@import 'myjob';
+
 .navbar-laravel {
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
