--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,16 +13,12 @@
   max-width: 350px;
 }
 
-.sub-navbar {
-  background-color: #c61618 !important;
-}
-
 .epfl-bg-color {
   background-color: #c61618 !important;
 }
 
 .agep-bg-color {
-  background-color: #69ABD6 !important;
+  background-color: #7595af !important;
 }
 
 .epfl-txt-color {
@@ -33,10 +29,18 @@
   height: 412px;
 }
 
+.container {
+  background-color: white;
+}
+
 @media screen and (max-width: 1264px) {
   .adopte-etudiant-card {
     height: auto;
   }
+}
+
+.v-card {
+  border-radius: 0px;
 }
 
 .navbar-laravel {
