Worked on mail, log, job list and others

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,12 +17,23 @@
   background-color: #c61618 !important;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .agep-bg-color {
   background-color: #7595af !important;
 }
 
 .epfl-txt-color {
   color: #c61618 !important;
+}
+
+.myjob-alert {
+  position: fixed;
+  top: 28px;
+  left: 10%;
+  width: 80%;
 }
 
 .adopte-etudiant-card {
