change on style

--- a/resources/sass/_myjob.scss
+++ b/resources/sass/_myjob.scss
@@ -16,7 +16,7 @@
   cursor : pointer;
 }
 .agep-bg-color{
-  background-color: #7595af!important;
+  background-color: #707070!important;
 }
 
 .epfl-txt-color{
