--- a/public/css/app.css
+++ b/public/css/app.css
@@ -120,3 +120,16 @@ body {
   padding-right: 0px;
 }
 
+@media screen and (max-width: 599px) {
+  .epfl-card {
+    padding: 0px !important;
+    margin: 0px !important;
+    border: none !important;
+  }
+
+  .main-container {
+    padding: 0px !important;
+    margin: 0px !important;
+  }
+}
+
