--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -71,3 +71,19 @@ body{
     padding-left:0px;
     padding-right:0px;
 }
+
+@media screen and (max-width: 599px) {
+    .epfl-card{
+        padding:0px!important;
+        margin:0px!important;
+        border:none!important;
+    }
+    .main-container{
+        padding:0px!important;
+        margin:0px!important;
+      }
+  }
+
+@media screen and (max-width: 959px) {
+
+}
